11/02/2025/11:12PM
Fixing warnings, and gradle-wrapper.jar, fixing compatibility with firestore_auth, building apk and
sincronize java with firebase and gradle, fixing major warnings, improving fetching get code on patient patient_screen
12/02/2025/8:42 am

fixing troubles with searching bar, Researching and implementing right structure in my sql tables
12/02/2025 5:51 pm 
Handling if patient is already inserted to patient table in my app_herbal database, still remaining showing in UI
and ordering folders and files as they should be order to get the proper project structure.
making structrure of my database tables and how I will handle data in order to keep maintenance,avoiding repeat data
 making easy to give maintenance service, reduce troubles with connections, post, get, put and delete and thinking
 how reference logic will be handle in code logic and not in the structrure of my tables.
18/02/2025 8:40

handling of references with frontend code between, payment, patient and treatment_plan tables, making it works, still remaining separating code from payment_provider.dart, research and learning about git

18/02/2025 8:40

handling of references with frontend code between, payment, patient and treatment_plan tables, making it works, still remaining separating code from payment_provider.dart, research and learning about git

19/02/2025 6:37PM
making treatment_plan_view and relating with patient and treatment_plan, services and patient_provider
still remaining implementing code logic relationship between patient,treatment_plan and payment tables

24/02/2025 
implementing logic a relationship between patient, payment, treatment_plan tables separating Logic from UI and making it works smoothly without affect it if treatment_plans are affected, we relate patient with treatment_plan and patient with payment, so in that case, even if plan change of price of anything, it wont affect logic code that handles payments, and remaining balance.



